<resources>
    <string name="mainp">Main Page</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile1">Profile</string>
    <string name="app_name">Reel Life</string>
    <string name="add">Add Page</string>
    <string name="profile">My Profile</string>
    <string name="search">Search</string>
    <string name="button1">Register</string>
    <string name="username">Username</string>
    <string name="button2">Already have an account</string>
    <string name="descript">Description</string>
    <string name="button3">Login</string>
    <string name="button4">Forgot your Password</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeLogin">Welcome back to Real Life!</string>
    <string name="signup_to_save_your_journey">SignUp to Save Your Journey</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling_profile">ScrollingActivity</string>
    <string name="large_text"></string>
    <string name="action_settings">Settings</string>
</resources>